--- a/app/(content)/athletes/[slug]/page.module.css
+++ b/app/(content)/athletes/[slug]/page.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic&display=swap");
+
 .newsContainer {
   display: flex;
   flex-direction: column;
@@ -10,58 +12,177 @@
   flex-direction: row-reverse;
   align-items: center;
   justify-content: center;
-  gap: 5rem;
+  gap: 3rem;
+  padding-top: 3rem;
   width: 100%;
   background-color: #19191e;
 }
 
+.newsArticle header {
+  display: flex;
+  align-items: center;
+  gap: 6rem;
+}
+
+.newsArticle h4 {
+  font-size: 1rem;
+  width: 25rem;
+}
+
+.newsArticle button {
+  border-color: #fafbfd;
+  color: white;
+  font-weight: bold;
+  border-width: 0.2rem;
+  font-size: 15px;
+  background: none;
+  line-height: 22px;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  padding: 12px 18px;
+  border-style: solid;
+  cursor: pointer;
+}
+
+.newsArticle button:hover {
+  background: #fafbfd58;
+}
+
+.newsArticle button:active {
+  background: red;
+}
+
 .newsArticle img {
   display: block;
-  width: 20rem;
-  margin-right: 1rem;
+  width: 24rem;
+  padding-right: 2rem;
   border-radius: 4px;
+}
+
+.actionImage {
+  flex-direction: column;
+  justify-content: end;
+  padding-right: 1rem;
+}
+
+.actionImage h2 {
+  color: #fff;
+}
+
+.actionImage img {
+  width: 20rem;
+  border-radius: 4px;
+}
+
+.newsArticle .detailsAndResume {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .newsArticle .fighterDetails {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: flex-start;
+  text-align: left;
+}
+
+.newsArticle .fighterResume {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 20rem;
+  text-align: left;
+}
+
+.finishes {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid gray;
+  margin: 0.9rem;
+  border-top: none;
+  border-left: none;
+  border-bottom: none;
+}
+
+.finishes hr {
+  border: 1px solid red;
+  width: 3rem;
+  margin: 0.5rem;
+}
+
+.finishes h2 {
+  font-size: 3rem;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 .newsArticle h2 {
   color: white;
   font-weight: bold;
-  font-size: 2.5rem;
-  font-family: monospace;
+  font-size: 3rem;
+  font-family: "Bebas Neue", sans-serif;
 }
+
 .newsArticle span {
   color: white;
   font-weight: bold;
   margin: 5px;
 }
 
-.newsArticle p {
+.newsArticle h3 {
   color: #a4a7ac;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 1rem;
 }
-.fighterResume {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  align-items: center;
-  width: 20rem;
+
+.newsArticle p {
+  color: white;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 0.9rem;
+  word-wrap: break-word;
+  text-align: left;
+  margin: 0.5rem;
 }
 
-.finishes {
-  display: flex;
-  flex-direction: column;
-}
-.finishes hr {
-  border: 1px solid gray;
-  width: 5rem;
-}
-.finishes h2 {
-  font-size: 3rem;
+/* MEDIA QUERY */
+
+@media (max-width: 768px) {
+  .newsArticle {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+     flex-flow: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .newsArticle img {
+    width: 13rem;
+    flex-basis: 50%;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+    padding-right: 10px;
+    box-sizing: inherit;
+  }
+  
+  .newsArticle header {
+    display: block;
+    order: 1;
+
+  }
+  
+  .actionImage img {
+    width: 100%;
+  }
+  .actionImage {
+    flex-direction: column;
+    justify-content: end;
+    padding: 0;
+  }
+  .newsArticle .detailsAndResume {
+    display: flex;
+    justify-content: center;
+  }
 }
