fighter-record section

--- a/app/(content)/athletes/[slug]/page.module.css
+++ b/app/(content)/athletes/[slug]/page.module.css
@@ -1,12 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic&display=swap");
 
-.newsContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-
 .newsArticle {
   display: flex;
   flex-direction: row-reverse;
@@ -85,20 +78,21 @@
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
+  margin-bottom: 1rem;
 }
 
 .newsArticle .fighterResume {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 20rem;
+  width: 10rem;
   text-align: left;
 }
 
-.finishes {
-  display: flex;
+.finishes:nth-child(1) {
   flex-direction: column;
   border: 1px solid gray;
+  text-align: center;
   margin: 0.9rem;
   border-top: none;
   border-left: none;
@@ -153,11 +147,11 @@
     display: flex;
     flex-direction: column;
     flex-basis: 50%;
-     flex-flow: wrap;
+    flex-flow: wrap;
     align-items: center;
     justify-content: center;
   }
-  
+
   .newsArticle img {
     width: 13rem;
     flex-basis: 50%;
@@ -166,13 +160,12 @@
     padding-right: 10px;
     box-sizing: inherit;
   }
-  
+
   .newsArticle header {
     display: block;
     order: 1;
-
   }
-  
+
   .actionImage img {
     width: 100%;
   }
@@ -185,4 +178,101 @@
     display: flex;
     justify-content: center;
   }
+}
+
+/* FIGHTES DETAILS */
+
+.h2{
+  color: #19191e;
+  font-weight: 200;
+  font-size: 2rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  padding: 1.5rem;
+}
+.athleteResultsInfo {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+}
+
+.athleteResultsContent {
+  display: flex;
+  align-items: flex-start;
+}
+
+.athleteResultsImage {
+  width: 300px;
+  margin-right: 20px;
+}
+
+.athleteResultsText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.athleteResultsHeadline {
+  text-align: center;
+  color: #19191e;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 24px;
+  margin-top: 10px;
+}
+
+.athleteResultsDate {
+  font-size: 20px;
+  color: #a4a7ac;
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 1px solid gainsboro;
+  padding-bottom: 5px;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.athleteResultsDetails {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.athleteResultsResults {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.athleteResultsResult {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.athleteResultsResultLabel {
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.athleteResultsResultText {
+  font-size: 16px;
+  color: #333;
+}
+
+/* MEDIA QUERY */
+@media (max-width: 768px){
+  .athleteResultsImage {
+    width: 100px;
+    margin-right: 20px;
+  }
+  
 }
