--- a/components/MainHeader/MainHeader.module.css
+++ b/components/MainHeader/MainHeader.module.css
@@ -1,10 +1,13 @@
 .mainHeader {
-  position: relative;
+  top: 0;
+  width: 100%;
+  position: fixed;
   background-color: #181817;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 2rem;
+  z-index: 1000;
 }
 
 .logo {
@@ -55,7 +58,7 @@
 
 .navMenu {
   position: fixed;
-  top: 0;
+  top: -4px;
   right: 0;
   display: flex;
   flex-direction: column;
@@ -65,10 +68,9 @@
   z-index: 1;
   text-align: center;
   background: white;
-  border-radius: 0; 
+  border-radius: 0;
   margin-top: 6rem;
 }
-
 
 .navMenu ul {
   flex-direction: column;
