--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 html {
   font-family: "Merriweather", serif;
   scroll-behavior: smooth;
-  margin-top: 6rem;
+  margin-top: 5rem;
 }
 
 body {
@@ -81,15 +81,37 @@ ul {
 }
 
 .modal-backdrop {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.684);
+  background-color: rgba(0, 0, 0, 0.762);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.x-elem {
+  position: relative;
+}
+
+.X {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-weight: bold;
+  font-size: 1.4rem;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  cursor: pointer;
+  transition: 0.5s ease, -webkit-text-fill-color 0.5s ease, transform 0.3s ease;
+}
+
+.X:hover {
+  background: -webkit-linear-gradient(#ea1414, #d0c6c6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transform: scale(1.1);
 }
 
 .modal img {
